upgrade errorprone-support static analysis